--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>Since our school network blocked the "jsemu emulator", I forked the files onto my account so others can enjoy the games again. Enjoy! Newest Branches:</p>
+          <p><a href="launcher.html#advancewars2">adVANce wARSE 2</a></p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
