Added temporary save button

--- a/launcher.html
+++ b/launcher.html
@@ -65,6 +65,7 @@
     </head>
     <body>
         <input id="eval-is-evil" style="font-size: 2rem; position: fixed; left: 0; top: 0; z-index: 69420;" placeholder="Enter JS code, press Enter to eval" />
+        <button id="eval-is-seriously-evil" style="position: fixed; right: 0; top: 0; z-index: 69420;" onclick="Iodine.exportSave();">I'm too lazy to debug the eval console<br>so here's a save button instead</button>
         <script>
             const __listrez__input_ = document.getElementById("eval-is-evil");
             __listrez__input_.addEventListener("keydown", (e)=>{
