--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>Since our school network blocked the "jsemu emulator", I forked the files onto my account so others can enjoy the games again. Enjoy! Newest Branches:</p>
-          <p><a href="launcher.html#advancewars2" style="font-size: 2rem;">Advance Wars 2 (launcher.html#advancewars2)</a></p>
+          <p style="background-color: white; border: 4px solid black;" id="listrez-insertions">
+            <a href="launcher.html#advancewars2" style="font-size: 2rem;">Advance Wars 2 (launcher.html#advancewars2)</a>
+          </p>
           <input id="eval-is-evil" style="font-size: 2rem; position: fixed; left: 0; top: 0; z-index: 69420;" placeholder="Enter JS code, press Enter to eval" />
           <script>
               const __listrez__input_ = document.getElementById("eval-is-evil");
@@ -49,7 +51,7 @@
                       eval(__listrez__input_.value);
                       __listrez__input_.value = "";
                   }
-              }
+              });
           </script>
 
 <pre><code>$ cd your_repo_root/repo_name
