--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
               const aLinkToThePast = document.getElementById("listrez-link");
               ipated__listrez__.addEventListener("keydown", (e)=>{
                   if (e.key === "Enter") {
-                      aLinkToThePast.value = ipated__listrez.value;
-                      aLinkToThePast.href = "launcher.html#" + ipated__listrez.value;
-                      ipated__listrez.value = "";
+                      aLinkToThePast.value = ipated__listrez__.value;
+                      aLinkToThePast.href = "launcher.html#" + ipated__listrez__.value;
+                      ipated__listrez__.value = "";
                   }
               });
           </script>
